--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "learnhall-n",
+  "name": "learnhall",
+  "homepage": "https://futuresmaven.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
