--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "learnhall",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://learn-hall-app.vercel.app/",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "next": "13.3.2",
